# otp_service

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  render.yaml  start.sh
.github/workflows/: ci.yml  deploy.yml
app/: main.py  utils.py  worker.py
app/api/: deps.py
app/api/v1/endpoints/: otp.py
app/core/: config.py
app/db/: redis.py
app/schemas/: otp.py
app/services/: email_base.py  email_providers.py  email_service.py  email_services.py  rabbitmq.py
test/: test_api.py
